name:                pure-forms
version:             0.8.0.0
synopsis:            Monadic form builder
homepage:            purehs.org/doc/pure-forms
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-forms.git

library
  exposed-modules:     Pure.Forms
  build-depends:       base,
                       pure,
                       pure-state,
                       pure-json,
                       pure-txt-trie,
                       base,
                       mtl,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
